# tg_schedule

./: .gitignore  Makefile  README.md  pyproject.toml  schedule.sql
bot/: .env  createdb.py  database.sql  main.py  models.py  schedule.sql  trash.py  weather.json  weather.py
database/: db.json
tests/: test_models.py
tests/fixture/: database.json  today.json  tomorrow.json
