[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Александр Мышкин <sir.myshkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.14.0"
schedule = "^1.2.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
